@@ -8,9 +8,14 @@ use inc::Module::Install;
 # Definition.
 abstract 'Install the Lego modules.';
 author 'Michal Spacek <skim@cpan.org>';
+author_requires 'English' => 0;
+author_requires 'File::Object' => 0.08;
+author_requires 'Test::Pod' => 0;
+author_requires 'Test::Pod::Coverage' => 0;
 license 'bsd';
 name 'Task-Lego';
 readme_from 'Lego.pm';
+recursive_author_tests('xt');
 requires 'Lego::From::PNG' => 0.04;
 requires 'Lego::Ldraw' => '0.5.8';
 requires 'Lego::Part' => '0.03';
@@ -20,12 +25,8 @@ resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Task-Lego';
 resources 'homepage' => 'https://github.com/tupinek/Task-Lego';
 resources 'repository' => 'git://github.com/tupinek/Task-Lego';
-test_requires 'English' => 0;
-test_requires 'File::Object' => 0.08;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
-test_requires 'Test::Pod' => 0;
-test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
 version '0.03';
 
